# memo

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
Formula/: aimemo.rb  memo.rb
aimemo/src/: main.rs
docs/agents/: claude-code.md  copilot.md  cursor.md  windsurf.md
memo-cli/: Cargo.toml
memo-cli/src/: hooks.rs  main.rs  store.rs
memo-cli/tests/: integration.rs
memo-core/: Cargo.toml
memo-core/src/: lib.rs
memo-hooks/: Cargo.toml
memo-hooks/src/: lib.rs
