[package]
name = "memo-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Core storage and data model for memo, persistent memory for AI coding agents"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
